<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.fragment.InsertTaskFragment"
        android:background="#034706">

        <RelativeLayout
            android:id="@+id/taskLayout_insert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/task_picture_insert"
                android:layout_width="110dp"
                android:layout_height="90dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_add_image"
                android:layout_alignParentRight="true" />

            <ImageView
                android:id="@+id/btn_picture_insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/task_picture_insert"
                android:layout_alignStart="@+id/task_picture_insert"
                android:layout_alignBottom="@id/description_form_insert"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_camera"
                android:layout_alignLeft="@+id/task_picture_insert"
                android:layout_alignParentRight="true" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_form_insert"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/task_picture_insert"
                android:hint="@string/title"
                android:padding="5dp"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/task_picture_insert"
                android:textColorHint="#FF9800"
                app:boxStrokeColor="#FF9800"
                app:endIconTint="#FF9800"
                app:hintTextColor="#FF9800"
                app:startIconTint="#FF9800">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_insert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="#8BC34A"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_form_insert"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_form_insert"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/task_picture_insert"
                android:hint="@string/description"
                android:padding="5dp"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/task_picture_insert"
                android:textColorHint="#FF9800"
                app:boxStrokeColor="#FF9800"
                app:endIconTint="#FF9800"
                app:hintTextColor="#FF9800"
                app:startIconTint="#FF9800">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_insert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="#8BC34A"/>

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/taskLayout_insert"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/btn_date_insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:text="@string/date"
                android:layout_marginRight="2dp"
                android:backgroundTint="#6E9F36"/>

            <Button
                android:id="@+id/btn_time_insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:text="@string/time"
                android:layout_marginLeft="2dp"
                android:backgroundTint="#6E9F36"/>

        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_picker"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioBtn_todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todo"
                android:textColor="#8BC34A"/>

            <RadioButton
                android:id="@+id/radioBtn_doing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doing"
                android:textColor="#8BC34A"/>

            <RadioButton
                android:id="@+id/radioBtn_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:textColor="#8BC34A"/>
        </RadioGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGroup"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/btn_cancel_insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:layout_marginRight="2dp"
                android:backgroundTint="#FB9F17"/>

            <Button
                android:id="@+id/btn_save_insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:text="@string/save"
                android:textAllCaps="false"
                android:layout_marginLeft="2dp"
                android:backgroundTint="#FB9F17"/>
        </LinearLayout>


    </RelativeLayout>
</layout>