<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#689339"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".view.fragment.TabsFragment">

        <RelativeLayout
            android:id="@+id/layout_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgView_emptyTaskList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_bulleted_list" />

                <TextView
                    android:id="@+id/textView_emptyMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/empty_task_list"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="-2dp"
                android:layout_marginRight="-2dp" />

        </RelativeLayout>

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/fam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            app:fab_addButtonColorNormal="#FF5722"
            app:fab_addButtonColorPressed="@color/colorPrimary"
            app:fab_addButtonPlusIconColor="@color/cardview_dark_background"
            app:fab_addButtonSize="normal"
            app:fab_labelsPosition="left">


            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF9800"
                android:scaleType="centerInside"
                android:src="@drawable/ic_add"
                app:fab_labelStyle="@style/menu_labels_style"
                app:fab_size="mini"
                app:fab_title="@string/fab_insert" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF9800"
                android:scaleType="centerInside"
                android:src="@drawable/ic_delete"
                app:fab_size="mini"
                app:fab_title="@string/fab_delete" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_logOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF9800"
                android:scaleType="centerInside"
                android:src="@drawable/ic_exit_to_app"
                app:fab_size="mini"
                app:fab_title="@string/fab_logOut" />

        </com.getbase.floatingactionbutton.FloatingActionsMenu>

    </RelativeLayout>
</layout>