<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
    <RelativeLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2A4A03"
        tools:context=".view.fragment.LoginFragment">



        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_login"
            android:layout_width="match_parent"
            android:layout_height="345dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            app:cardBackgroundColor="#4B810B"
            app:cardCornerRadius="4dp"
            app:cardElevation="5dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="46dp"
                android:layout_height="62dp"

                android:background="@drawable/ic_paper_clip" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="Sign up"
                android:textColor="#234002"
                android:textSize="30sp"
                android:textStyle="bold|italic" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_form_signUp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    app:counterEnabled="true"
                    app:counterMaxLength="12"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username_signUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_form_signUp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/password"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_signUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberPassword" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardView_login"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSignUp_SignUP"
                android:layout_width="117dp"
                android:layout_height="71dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/sign_up"
                app:backgroundTint="#5D8E25" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonLayout"
            android:gravity="center"
            android:orientation="horizontal"/>




    </RelativeLayout>
</layout>